services/images/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: images-service
  namespace: backend
spec:
  type: ClusterIP
  selector:
    app: images
  ports:
    - port: 80
      targetPort: 8000
